--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,16 @@
-*{
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
+* {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   margin: 0 auto;
+  background-color: #1e1e1e;
+}
+#root, body {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+button {
+  font-family: "Inter", sans-serif;
 }
