--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   margin: 0 auto;
-  background-color: #1e1e1e;
+  /* background-color: #1e1e1e; */
 }
 #root, body {
   height: 100vh;
