--- a/src/components/login-register/login-register.css
+++ b/src/components/login-register/login-register.css
@@ -31,3 +31,12 @@
     color: #ffffff;
     font-size: 16px;
 }
+
+@media screen and (max-width: 835px) {
+    .imgLogin {
+        display: none;
+    }
+    .form {
+        min-width: 100%;
+    }
+}
